; ModuleID = '/home/carl/AnghaBench/linux/fs/nfs/extr_nfs4sysctl.c_nfs4_register_sysctl.c'
source_filename = "/home/carl/AnghaBench/linux/fs/nfs/extr_nfs4sysctl.c_nfs4_register_sysctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@nfs4_cb_sysctl_root = common dso_local global i32 0, align 4
@nfs4_callback_sysctl_table = common dso_local global i32* null, align 8
@ENOMEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nfs4_register_sysctl() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @nfs4_cb_sysctl_root, align 4
  %3 = call i32* @register_sysctl_table(i32 %2)
  store i32* %3, i32** @nfs4_callback_sysctl_table, align 8
  %4 = load i32*, i32** @nfs4_callback_sysctl_table, align 8
  %5 = icmp eq i32* %4, null
  br i1 %5, label %6, label %9

6:                                                ; preds = %0
  %7 = load i32, i32* @ENOMEM, align 4
  %8 = sub nsw i32 0, %7
  store i32 %8, i32* %1, align 4
  br label %10

9:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %10

10:                                               ; preds = %9, %6
  %11 = load i32, i32* %1, align 4
  ret i32 %11
}

declare dso_local i32* @register_sysctl_table(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
